Bug 437371 - Search for installed apps is case-sensitive
Summary: Search for installed apps is case-sensitive
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-19 18:28 UTC by Patrick Silva
Modified: 2021-05-24 01:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-19 18:28:59 UTC
SUMMARY
Sometimes search for installed apps is case sensitive. I can't reproduce searching for Konsole and Kate, for example.

STEPS TO REPRODUCE
1. open Discover and click on "Installed" in the sidebar
2. search for spectacle or info center: Discover finds nothing
3. search for Spectacle or Info Center: Discover finds the app you have searched for 

EXPECTED RESULT
search shpuld always be case-insensitive

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2021-05-19 18:49:15 UTC
Hmm for me searching in the installed page is just totally broken: Bug 428681. It works for you some of the time?
Comment 2 Nate Graham 2021-05-19 18:49:59 UTC
Oh actually it does work for me, never mind. I can reproduce the bug.
Comment 3 Aleix Pol 2021-05-24 01:37:34 UTC
Git commit e4d22a17d677850ee44b02d036fd3dc1a8dd0125 by Aleix Pol.
Committed on 24/05/2021 at 01:36.
Pushed by apol into branch 'master'.

packagekit: Perform installed searches case-insensitive

M  +2    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/commit/e4d22a17d677850ee44b02d036fd3dc1a8dd0125
Comment 4 Aleix Pol 2021-05-24 01:37:51 UTC
Git commit 34f169ef528c969edbdba41d5a7d6d94b7dcc9e6 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 24/05/2021 at 01:37.
Pushed by apol into branch 'Plasma/5.22'.

packagekit: Perform installed searches case-insensitive


(cherry picked from commit e4d22a17d677850ee44b02d036fd3dc1a8dd0125)

M  +2    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/commit/34f169ef528c969edbdba41d5a7d6d94b7dcc9e6