packagekit: Perform installed searches case-insensitive

BUG: 437371